@@ -24,14 +24,82 @@
    Boston, MA 02110-1301, USA.
 */
 
-#include <uuid/uuid.h>
-
 #include "CoreFoundation/CFRuntime.h"
 #include "CoreFoundation/CFBase.h"
 #include "CoreFoundation/CFString.h"
 #include "CoreFoundation/CFUUID.h"
 
+/* Some of the code in CFUUID is based on Etoile's ETUUID class.
+   Copyright (C) 2007 Yen-Ju Check <yjchenx AT gmail DOT com> */
 
+#include <stdlib.h>
+#include <unistd.h>
+// On *BSD and Linux we have a srandomdev() function which seeds the random 
+// number generator with entropy collected from a variety of sources. On other
+// platforms we don't, so we use some less random data based on the current 
+// time and pid to seed the random number generator.
+#if defined(__FreeBSD__) \
+    || defined(__OpenBSD) \
+    || defined(__DragonFly__) \
+    || defined(__APPLE__)
+  #define INITRANDOM() srandomdev()
+#else
+  #include <sys/time.h>
+  #include <sys/types.h>
+  #include <sys/stat.h>
+  #include <fcntl.h>
+  #include <errno.h>
+  #define INITRANDOM() CFsrandomdev()
+    #if defined(__linux__)
+static void CFsrandomdev(void)
+{
+	int fd;
+	unsigned int seed = 0;
+	size_t len = sizeof(seed);
+	BOOL hasSeed = NO;
+  
+	fd = open("/dev/random", O_RDONLY | O_NONBLOCK, 0);
+	if (fd >= 0) 
+    {
+      if (errno != EWOULDBLOCK)
+        {
+          if (read(fd, &seed, len) == (ssize_t)len)
+            hasSeed = YES;
+        }
+      close(fd);
+    }
+  
+	if (hasSeed == NO) 
+    {
+      struct timeval tv;
+      unsigned long junk;
+      
+      gettimeofday(&tv, NULL);
+      seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ junk);
+    }
+	
+	srandom(seed);
+}
+    #else
+static void CFsrandomdev(void)
+{
+	struct timeval tv;
+	unsigned long junk;
+	unsigned int seed = 0;
+  
+	/* Within a process, junk is always initialized to the same value (on Linux),
+	   gettimeofday is microsecond-based and pid is fixed. This leads to many
+	   collisions if you call ETSRandomDev() in a loop, as -testString does
+	   in TestUUID.m. */
+	gettimeofday(&tv, NULL);
+	seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ junk);
+  
+	srandom(seed);
+}
+    #endif
+#endif
+
+static CFTypeID _kCFUUIDTypeID = 0;
 
 struct __CFUUID
 {
@@ -39,45 +107,37 @@ struct __CFUUID
   CFUUIDBytes   _bytes;
 };
 
-static CFTypeID _kCFUUIDTypeID = 0;
-
-#define UUID_FROM_UUIDBYTES(uuid, uuidBytes) do\
-{ \
-  uuid[0] = (uuidBytes).byte0; \
-  uuid[1] = (uuidBytes).byte1; \
-  uuid[2] = (uuidBytes).byte2; \
-  uuid[3] = (uuidBytes).byte3; \
-  uuid[4] = (uuidBytes).byte4; \
-  uuid[5] = (uuidBytes).byte5; \
-  uuid[6] = (uuidBytes).byte6; \
-  uuid[7] = (uuidBytes).byte7; \
-  uuid[8] = (uuidBytes).byte8; \
-  uuid[9] = (uuidBytes).byte9; \
-  uuid[10] = (uuidBytes).byte10; \
-  uuid[11] = (uuidBytes).byte11; \
-  uuid[12] = (uuidBytes).byte12; \
-  uuid[13] = (uuidBytes).byte13; \
-  uuid[14] = (uuidBytes).byte14; \
-  uuid[15] = (uuidBytes).byte15; \
-} while (0)
-
 static Boolean
 CFUUIDEqual (CFTypeRef cf1, CFTypeRef cf2)
 {
-  uuid_t uu1, uu2;
   CFUUIDBytes bytes1 = ((CFUUIDRef)cf1)->_bytes;
   CFUUIDBytes bytes2 = ((CFUUIDRef)cf2)->_bytes;
   
-  UUID_FROM_UUIDBYTES(uu1, bytes1);
-  UUID_FROM_UUIDBYTES(uu2, bytes2);
+  if (bytes1.byte0 == bytes2.byte0
+      && bytes1.byte1 == bytes2.byte1
+      && bytes1.byte2 == bytes2.byte2
+      && bytes1.byte3 == bytes2.byte3
+      && bytes1.byte4 == bytes2.byte4
+      && bytes1.byte5 == bytes2.byte5
+      && bytes1.byte6 == bytes2.byte6
+      && bytes1.byte7 == bytes2.byte7
+      && bytes1.byte8 == bytes2.byte8
+      && bytes1.byte9 == bytes2.byte9
+      && bytes1.byte10 == bytes2.byte10
+      && bytes1.byte11 == bytes2.byte11
+      && bytes1.byte12 == bytes2.byte12
+      && bytes1.byte13 == bytes2.byte13
+      && bytes1.byte14 == bytes2.byte14
+      && bytes1.byte15 == bytes2.byte15)
+    return true;
   
-  return uuid_compare (uu1, uu2) == 0 ? true : false;
+  return false;
 }
 
 static CFStringRef
 CFUUIDCopyFormattingDescription (CFTypeRef cf, CFDictionaryRef formatOptions)
 {
-  return CFUUIDCreateString (NULL, cf);
+  return CFUUIDCreateString (CFAllocatorGetDefault(), cf);
 }
 
 const CFRuntimeClass CFUUIDClass =
@@ -95,54 +155,46 @@ const CFRuntimeClass CFUUIDClass =
 
 void CFUUIDInitialize (void)
 {
+  INITRANDOM();
   _kCFUUIDTypeID = _CFRuntimeRegisterClass (&CFUUIDClass);
 }
 
 
 
-static inline CFUUIDRef
-CFUUIDCreateFromUUID (CFAllocatorRef alloc, uuid_t uuid)
-{
-  CFUUIDBytes uuidBytes;
-  
-  uuidBytes.byte0 = uuid[0];
-  uuidBytes.byte1 = uuid[1];
-  uuidBytes.byte2 = uuid[2];
-  uuidBytes.byte3 = uuid[3];
-  uuidBytes.byte4 = uuid[4];
-  uuidBytes.byte5 = uuid[5];
-  uuidBytes.byte6 = uuid[6];
-  uuidBytes.byte7 = uuid[7];
-  uuidBytes.byte8 = uuid[8];
-  uuidBytes.byte9 = uuid[9];
-  uuidBytes.byte10 = uuid[10];
-  uuidBytes.byte11 = uuid[11];
-  uuidBytes.byte12 = uuid[12];
-  uuidBytes.byte13 = uuid[13];
-  uuidBytes.byte14 = uuid[14];
-  uuidBytes.byte15 = uuid[15];
-  
-  return CFUUIDCreateFromUUIDBytes (alloc, uuidBytes);
-}
-
 CFUUIDRef
 CFUUIDCreate (CFAllocatorRef alloc)
 {
-  uuid_t uuid;
-  uuid_generate (uuid);
-  return CFUUIDCreateFromUUID (alloc, uuid);
+  CFIndex i;
+  CFUUIDBytes bytes;
+  
+  for (i = 0 ; i < 16 ; ++i)
+    {
+      long r = random ();
+      ((UInt8*)&bytes)[i] = (UInt8)r;
+    }
+  // Set version
+  bytes.byte6 &= 0x0F;
+  bytes.byte6 |= 0x40;
+  // Bit 6 must be 0 and 7 must be 1
+  bytes.byte8 &= 0xBF;
+  
+  return CFUUIDCreateFromUUIDBytes (alloc, bytes);
 }
 
 CFUUIDRef
 CFUUIDCreateFromString (CFAllocatorRef alloc, CFStringRef uuidStr)
 {
-  uuid_t uuid;
-  const char *data = CFStringGetCStringPtr (uuidStr, kCFStringEncodingASCII);
-  if (data == NULL)
-    return NULL; // FIXME
-	uuid_parse (data, uuid);
+  CFUUIDBytes bytes;
+  char data[36]; // 36 chars
+  if (!CFStringGetCString (uuidStr, data, 36, kCFStringEncodingASCII))
+	sscanf (data, "%2hhx%2hhx%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx-"
+  "%2hhx%2hhx%2hhx%2hhx%2hhx%2hhx",
+    &bytes.byte0, &bytes.byte1, &bytes.byte2, &bytes.byte3,
+    &bytes.byte4, &bytes.byte5, &bytes.byte6, &bytes.byte7,
+    &bytes.byte8, &bytes.byte9, &bytes.byte10, &bytes.byte11,
+    &bytes.byte12, &bytes.byte13, &bytes.byte14, &bytes.byte15);
   
-  return CFUUIDCreateFromUUID (alloc, uuid);
+  return CFUUIDCreateFromUUIDBytes (alloc, bytes);
 }
 
 CFUUIDRef
@@ -188,15 +240,17 @@ CFUUIDCreateWithBytes (CFAllocatorRef alloc, UInt8 byte0, UInt8 byte1,
 CFStringRef
 CFUUIDCreateString (CFAllocatorRef alloc, CFUUIDRef uuid)
 {
-  char out[37]; // 36 + null byte
-  uuid_t uu;
-  CFUUIDBytes uuidBytes = uuid->_bytes;
+  CFStringRef ret;
+  CFUUIDBytes bytes = uuid->_bytes;
   
-  UUID_FROM_UUIDBYTES(uu, uuidBytes);
+  ret = CFStringCreateWithFormat (alloc, NULL, CFSTR("%2hhx%2hhx%2hhx%2hhx-"
+    "%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx%2hhx%2hhx%2hhx%2hhx"),
+      bytes.byte0, bytes.byte1, bytes.byte2, bytes.byte3,
+      bytes.byte4, bytes.byte5, bytes.byte6, bytes.byte7,
+      bytes.byte8, bytes.byte9, bytes.byte10, bytes.byte11,
+      bytes.byte12, bytes.byte13, bytes.byte14, bytes.byte15);
   
-  uuid_unparse (uu, out);
-  
-  return CFStringCreateWithCString (alloc, out, kCFStringEncodingASCII);
+  return ret;
 }
 
 CFUUIDRef
@@ -205,7 +259,7 @@ CFUUIDGetConstantUUIDWithBytes (CFAllocatorRef alloc, UInt8 byte0, UInt8 byte1,
   UInt8 byte8, UInt8 byte9, UInt8 byte10, UInt8 byte11, UInt8 byte12,
   UInt8 byte13, UInt8 byte14, UInt8 byte15)
 {
-  return NULL;
+  return NULL; // FIXME
 }
 
 CFUUIDBytes
